# wave

./: .gitignore  .gitmodules  Cargo.toml  Dockerfile  Makefile  Prusti.toml  README.md  TODO  cbindgen.toml  errors  memory_safety.spec  print_stats.py  rust-toolchain  scan_for_trusted.sh  test.py  verify.sh  wrappers.c  wrappers_no_assert.c  wrappers_utils.h
.github/workflows/: rust.yml
bindings/: veriwasi.h  wave.h
examples/: Makefile  Makefile.inc
examples/cat/: Makefile  cat  cat.c
examples/client/: Makefile  client  client.c
examples/client/native_client/: client.c
examples/client/server/: a.out  server.c
examples/client_send_recv/: Makefile  client_send_recv  client_send_recv.c
examples/client_send_recv/server/: server.c
examples/clock/: Makefile  clock  clock.c
examples/cp/: Makefile  cp  cp.c
examples/cp_and_insert/: Makefile  cp_and_insert  cp_and_insert.c
examples/cp_and_insert/output/: tmp.txt
examples/fallocate/: Makefile  README.txt  fallocate  fallocate.c
examples/hello/: Makefile  build  hello  hello.wasm  hello.wasm.c  hello.wasm.h
examples/link/: Makefile  link  link.c
examples/ls/: Makefile  ls  ls.c
examples/mkdir/: Makefile  mkdir  mkdir.c
examples/permissions_regression/: Makefile  permissions
examples/print_args_and_environ/: Makefile  print_args_and_environ  print_args_and_environ.c
examples/raise/: Makefile  raise  raise.c
examples/random/: Makefile  random  random.c
examples/rename/: B.txt  Makefile  rename  rename.c
examples/renumber/: Makefile  renumber  renumber.c
examples/rmdir/: Makefile  rmdir  rmdir.c
examples/setfl/: Makefile  setfl  setfl.c
examples/setfl/data/: tmp.txt
examples/sleep/: Makefile  sleep  sleep.c
examples/sqlite/: Makefile  README.md  compile_speedtest1.sh
examples/sqlite/lib/: _pthread.h  _unistd.h  dummy.h
examples/stat/: Makefile  stat  stat.c
examples/stat/data/: tmp.txt
examples/symlink/: Makefile  symlink  symlink.c
examples/symlink/data/: link
examples/sync/: Makefile  sync  sync.c
examples/wierd_names/: Makefile
examples/zijie_permissions_bug/: permissions.c
full_memsafe_fs/: Makefile  memory_safety.spec
full_memsafe_fs/C/: wrappers.c  wrappers_utils.h
fuzz-gen/: out.rs
fuzz-gen/src/: main.rs  qc_rewriter.rs
gen-fuzz/: Cargo.toml  test.rs
gen-fuzz/src/: lib.rs.bak  main.rs  qc_rewriter.rs
negative_smack_tests/: integer_underflow_overflow.c  memory_safety.c  run.sh
newspec/: Makefile
newspec/C/: harness.c  os.h  runtime.h  wrappers.c  wrappers.h
newspec/Rust/wrappers/: Cargo.toml
owned-components/: Cargo.toml
owned-components/src/: lib.rs
rust_wrappers/: Cargo.toml
simple_fs/: Makefile  a-1w9myzho.bc  a-iaaf9ubk.bpl  b-2dkozj2f.bc  errno-g3cb80yv.bc  main.mem.dot  memory_safety.spec  smack-jp38wkuy.bc  smack-p8yyk6mw.bc  smack-rust-b72wvyxa.bc  stdlib-0cv99jou.bc  wrappers-1oa6hotf.bc
simple_fs/C/: model.h  wrappers.c  wrappers_for_model.c  wrappers_utils.h
simple_fs/Cpp/: wrappers.cpp  wrappers_utils.h
simple_fs/Rust/rust_wrappers/: Cargo.toml
simple_isolated_fs/: Makefile  isolation.spec
simple_isolated_fs/Cpp/: wrappers.cpp  wrappers_utils.hpp
spec_parser/: Cargo.toml
spec_parser/src/: main.rs  parser.rs  types.rs  wrapper_codegen.rs
src/: fdmap.rs  iov.rs  lib.rs  lucet_frontend.rs  os.rs  path_resolution.rs  poll.rs  runtime.rs  rvec.rs  setup_teardown.rs  spec.rs  tests.rs  trace.rs  types.rs  wasm2c_frontend.rs  wrappers.rs  writeback.rs
src/external_specs/: option.rs  vec.rs
src/os/: mod.rs
src/os/platform/: linux.rs  mac.rs  macos.rs
src/stats/: mod.rs  noop_instrumentation.rs  stats.rs  timing.rs
src/tcb/: ffi.rs  misc.rs  mod.rs  path.rs  sbox_mem.rs
src/tcb/os_specs/: linux.rs  mod.rs
src/tcb/verifier/: mod.rs  spec.rs  trace.rs
src/tests/: fuzz_trusted.rs  integration_tests.rs  memwrite_experiment.rs  mod.rs  test_generator.rs  unit_tests.rs
src/types/: mod.rs
src/types/platform/: linux-x86_64.rs  macos-aarch64.rs  macos.rs  mod.rs
src/verifier/: spec.rs  trace.rs
src/verifier/external_specs/: mod.rs
src/verifier_interface/: mod.rs
tools/fuzz-gen/: Cargo.toml  out.rs  test.rs
tools/fuzz-gen/src/: lib.rs.bak  main.rs  (+1 more)
verified_by_contract/: Cargo.toml  verify.sh
verified_by_contract/src/: fdmap.rs  lib.rs  os.rs  runtime.rs  spec.rs  types.rs  wrappers.rs
veriwasi-contracts/: Cargo.toml
veriwasi-contracts/src/: lib.rs
wave-fuzz/: Makefile  check_crashes.sh  fuzz.c  test.c  test.txt
wave-fuzz/testcase-dir/: test.txt
wave-macros/: Cargo.toml  README.md
wave-macros/src/: lib.rs
waverunner/: Cargo.toml
waverunner/src/: main.rs  types.rs  waverunner.rs
(+19 files in other folders)
