[package]
name = "veriwasi"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "veriwasi"
crate_type = ["dylib", "rlib"]

[dependencies]
system-call = { git = "https://github.com/emlaufer/system-call.rs" }
#prusti-contracts = { path = "prusti-dev/prusti-contracts" }
prusti-contracts = { package = "veriwasi-contracts", path = "./veriwasi-contracts" }
libc = "0.2"
trace = "*"
extra_args = "0.1.69"

# Used for debugging
log = "0.4.14"
env_logger = "0.8.0"


quickcheck="1.0.3"
quickcheck_macros = "1.0.0"

# Used for computing stats on benchmarks
statistical = "1.0.0"

[target.'cfg(macos)'.dependencies]
mach2 = "0.4.0"
security-framework-sys = "2.4.2"

[features]
verify = ["extra_args/enable"] # feature for when we're verifying
#fuzzing = []
fuzzing = ["prusti-contracts/fuzzing"]
time_syscalls = []
time_hostcalls = []
