[package]
name = "wave"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "wave"
crate_type = ["dylib", "rlib"]

[dependencies]
system-call = "0.1.3"
prusti-contracts = { path = "prusti-dev/prusti-contracts" }
libc = "0.2"
trace = "*"
#extra_args = "=0.1.69"
wave-macros = { path = "wave-macros"}
owned-components = { path = "owned-components"}

# Used for debugging
log = "0.4.14"
env_logger = "0.8.0"


quickcheck="1.0.3"
quickcheck_macros = "1.0.0"

# Used for computing stats on benchmarks
statistical = "1.0.0"

[features]
verify = ["wave-macros/enable"] # feature for when we're verifying
time_syscalls = []
time_hostcalls = []
