[package]
name = "gen_fuzz"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# impl syn::Parse for Signature was added in 1.0.43
syn = { version = "^1.0.43", features = ["full", "extra-traits", "visit-mut", "parsing", "printing"] }
quote = "1.0"
proc-macro2 = "1.0"
uuid = { version = "0.8", features = ["v4", "serde"] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
#prusti-utils = { path = "../prusti-utils" }
