[package]
name = "veriwasi-contracts"
version = "0.1.0"
edition = "2018"

[dependencies]
prusti-contracts = { path = "../prusti-dev/prusti-contracts" }
extra_args = "0.1.64"

[features]
# Are we being compiled by Prusti and should include dependency on
# prusti-contracts-internal?
prusti = []
#verify = []
fuzzing = []

