[package]
name = "wave-macros"
version = "0.1.72"
edition = "2018"
license = "MIT"
description = "Rust macros for the Wave verified Wasm runtime"
homepage = "https://github.com/enjhnsn2/extra_args"
repository = "https://github.com/enjhnsn2/extra_args"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[lib]
proc-macro = true

[dependencies]
proc-macro2 = { version = "1.0", features = ["nightly"] }
quote = "1.0"
syn = { version = "1.0.76", features = ["full", "fold", "extra-traits"] }


[features]
enable = [] # enables extra args (used to enable/disable macro at compiletime)
